# chris_world_models

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
chris_world_models/: gazebo_launch_description.py  model_spawner.py  random_models.py
launch/: add_ball.launch  add_balls.launch.py  add_cube.launch  add_cube.launch.py  creech_map_050_server.launch.py  creech_random_balls.launch.py  game_balls.launch  game_balls.launch.py  gazebo_corridors_world.launch  gazebo_corridors_world.launch.py  gazebo_creech_world.launch.py  gazebo_e_world.launch.py  gazebo_empty_world.launch  gazebo_empty_world.launch.py  gazebo_jackal_race_world.launch.py  gazebo_luter_world.launch.py  gazebo_simple_creech_world.launch  gazebo_simple_lab_world.launch  gazebo_simple_lab_world.launch.py  gazebo_willow_world.launch  gazebo_willow_world.launch.py
maps/: chris_maze.pgm  chris_maze.yaml  chris_maze_gmapped.pgm  chris_maze_gmapped.yaml  creech_map.pgm  creech_map.yaml  creech_map_050.pgm  creech_map_050.py  creech_map_050.yaml  creech_map_100.pgm  creech_map_100.py  creech_map_100.yaml  empty.pgm  empty.yaml  empty_100.yaml  jackal_race.yaml  jackal_race_050.pgm  jackal_race_050.yaml  lab_world2_050.py  lab_world_050.pgm  lab_world_050.py  lab_world_050.yaml  make_map.py
param/: balls.csv
urdf/: blue_ball.urdf.xacro  green_ball.urdf.xacro  red_ball.urdf.xacro  red_cube.urdf.xacro  simple_ball.urdf.xacro  simple_cube.urdf.xacro
worlds/: creech_map.world  e_map.world  empty.world  lab_world_050.world  luter_world.world  playground.world  willowgarage.world
