<package format="3">
  <name>chris_world_models</name>
  <version>0.0.3</version>
  <description>Standard world models and corresponding map files for Gazebo used by CNU Robotics CHRISLab </description>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/CNURobotics/chris_world_models</url>
  <url type="repository">https://github.com/CNURobotics/chris_world_models</url>
  <url type="bugtracker">https://github.com/CNURobotics/chris_world_models/issues</url>
  <author>David Conner</author>

  <exec_depend>rclpy</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
